# test-driver-agent

./: .env.example  .gitignore  LICENSE  README.md  pom.xml  pyproject.toml
.cursor/rules/: mutation-testing.md  tdd-workflow.md
.github/workflows/: test-quality.yml
specs/: TEMPLATE.md  example-money-transfer.md
src/main/java/com/example/testdriver/: TestDriverApplication.java
src/main/java/com/example/testdriver/controller/: MoneyController.java
src/main/java/com/example/testdriver/domain/: Money.java
src/main/java/com/example/testdriver/service/: MoneyAuditPort.java  MoneyService.java  MoneyTransferService.java  NoOpMoneyAuditAdapter.java  TransferResult.java
src/main/resources/: application.yml
src/test/java/com/example/testdriver/controller/: MoneyControllerIT.java
src/test/java/com/example/testdriver/domain/: MoneyTest.java
src/test/java/com/example/testdriver/service/: MoneyServiceTest.java  MoneyTransferServiceTest.java
src/test_driver_agent/: config.py  executor.py  llm_client.py  prompts.py  server.py
